--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -25,7 +25,7 @@
   //
 
   .mask {
-    mask-image: url("../../public/mask.svg");
+    mask-image: url("../public/mask.svg");
     mask-repeat: no-repeat;
     mask-size: 40px;
     background: #ec4e39;
